# py-rust-module

./: .gitignore  Cargo.toml  README.md  benchmark.py  example.py  pydantic_model.py  pyproject.toml
src/: add.rs  benchmark_pydantic_process.rs  benchmark_pyo3_process.rs  calculator.rs  greet.rs  lib.rs  multiply.rs  process_pydantic_users.rs  process_pyo3_users.rs  user.rs
